# sg-bot-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging.py  main.py
app/bot/: __init__.py  keyboards.py  runner.py  states.py  texts.py
app/bot/middlewares/: __init__.py  auth.py  error.py
app/bot/routers/: __init__.py  clients.py  start.py
app/domain/: __init__.py  client.py  deal.py  enums.py  manager.py  product.py  task.py
app/integrations/: __init__.py  sheets_client.py
app/repositories/: __init__.py  client_repo.py  deal_repo.py  manager_repo.py  product_repo.py  schema.py  task_repo.py
app/services/: __init__.py  analytics_service.py  auth_service.py  client_service.py  deal_service.py  product_service.py  registry.py  task_service.py
app/web/: app.py  deps.py  security.py
app/web/routers/: analytics.py  auth.py  clients.py  deals.py  health.py  pages.py  products.py  tasks.py
app/web/static/css/: app.css
app/web/static/js/: app.js
app/web/templates/: _base.html  clients.html  dashboard.html  deals.html  landing.html  login.html  products.html  tasks.html
crm-files/: package.json  server.js
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Layout.js  Navbar.js  Sidebar.js
frontend/src/pages/: Analytics.js  Clients.js  Dashboard.js  Deals.js  Products.js  Settings.js
prompts/: starter-generator-consultant-prompt.md
public/: index.html
templates/: index.html
tests/: conftest.py
tests/integration/: test_web_api.py
tests/unit/: test_auth_service.py  test_client_service.py  test_domain.py  test_other_services.py  test_sheets_client.py
