[project]
name = "crm-bot"
version = "1.0.0"
description = "AutoCRM — Telegram bot + web CRM for generators & starters sales (Google Sheets backed)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "art888om" }]
license = { text = "MIT" }
dependencies = [
    "aiogram>=3.4,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "gspread>=6.0,<7",
    "google-auth>=2.27,<3",
    "google-auth-oauthlib>=1.2,<2",
    "httpx>=0.27,<1",
    "structlog>=24.1,<25",
    "cachetools>=5.3,<6",
    "python-dotenv>=1.0,<2",
    "pyjwt>=2.8,<3",
    "itsdangerous>=2.1,<3",
    "slowapi>=0.1.9,<1",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "respx>=0.20,<1",
    "types-cachetools>=5.3,<6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["bot.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long, handled by formatter
    "B008",  # function call in default arg (FastAPI Depends)
    "RUF001",  # ambiguous Cyrillic characters — the project is Russian
    "RUF002",  # ambiguous Cyrillic in docstrings — same as above
    "RUF003",  # ambiguous Cyrillic in comments — same as above
    "RUF012",  # mutable class attrs (used in some pydantic patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ["bot\\.py$", "scripts/"]

[[tool.mypy.overrides]]
module = ["gspread.*", "google.*", "slowapi.*", "cachetools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:gspread.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
